--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     min-height: 100px;
     background-size: cover;
     background-color: #00b4d8;
-    padding: 10px 12px;
+    padding: 6px 8px;
     max-height: 100px;
     position: sticky;
     
@@ -62,7 +62,7 @@ nav button{
     font-size: 15px;
     font-weight: 600;
     border-radius: 2rem;
-    transition: .3s;
+    transition: transform 3s;
     cursor: pointer;
 }
 
@@ -75,8 +75,8 @@ nav button:hover{
 .logo {
     width: 80px;
     height: auto;
-    margin-left:1px;
-    margin-top: px;
+    margin-left:-40px;
+    margin-top: -10px;
 }
 
 a {
@@ -106,6 +106,7 @@ a:hover{
 }
 /* End of navbar styling */
 
+/* START styling homepage home.html */
 h1{
     text-align: center;
     font-weight: bolder;
@@ -116,3 +117,34 @@ h1{
     font-size: x-large;
     
 }
+
+/* END styling homepage home.html */
+
+
+/* START styling terms and condions (terms.html)*/
+ .terms{
+    text-indent: 2%;
+    margin-inline-start: auto;
+    background-color: beige;
+    border-radius: 8px;
+    list-style-type: decimal;
+
+ }
+ .term {
+    text-align: center;
+    text-decoration: underline;
+    
+ }
+
+ .termss {
+    background-color: beige;
+    border-radius: 8px;
+    padding: 20px;
+    margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+
+ }
+
+
+/*END styling terms and condions (terms.html) */
