--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,70 @@ h1{
     
 }
 
+.Wrapper{
+    position: relative;
+    width: 400px;
+    background: transparent;
+    height: 440px;
+    background-color: aquamarine;
+    border: 2px solid rgba(255, 255, 255, .5);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 40%;
+}
+
+.wrapper .login-form{
+    width: 100%;
+    padding: 40px;
+}
+
+.login-form h2{
+    font-size: 2em;
+    color: #162938;
+    text-align: center;
+}
+
+.input-box{
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #162938;
+    font-weight: 500;
+    pointer-events: none;
+}
+
+.input-box input{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: #162938;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #162938;
+    line-height: 57px;
+}
 /* END styling homepage home.html */
 
 
@@ -130,12 +194,14 @@ h1{
     background-color: beige;
     border-radius: 8px;
     list-style-type: decimal;
-    align-items:center;
+    justify-content: center;
+    display: flex;
 
  }
  .term {
     text-align: center;
     text-decoration: underline;
+
     
  }
 
