--- a/styles.css
+++ b/styles.css
@@ -120,12 +120,12 @@ h1{
     
 }
 
-.Wrapper{
+.wrapper{
     position: relative;
     width: 400px;
     background: transparent;
     height: 440px;
-    background-color: aquamarine;
+    background-color: whitesmoke;
     border: 2px solid rgba(255, 255, 255, .5);
     backdrop-filter: blur(20px);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
@@ -133,6 +133,36 @@ h1{
     justify-content: center;
     align-items: center;
     margin-left: 40%;
+    border-radius: 20px;
+    /* overflow: hidden; */
+    transition: height .2s ease;
+}
+/* .wrapper .login-form {
+    display: none;
+} */
+
+.wrapper .form-box register {
+    position: absolute;
+    transform: translateX(400px);
+}
+ .wrapper.active{
+    height: 520px;
+ }
+.wrapper .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #162938;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .wrapper .login-form{
@@ -156,9 +186,9 @@ h1{
 
 .input-box label{
     position: absolute;
-    top: 50%;
+    top: 10px;
     left: 5px;
-    transform: translateY(-50%);
+    transform: translateY(-100%);
     font-size: 1em;
     color: #162938;
     font-weight: 500;
@@ -175,6 +205,7 @@ h1{
     color: #162938;
     font-weight: 600;
     padding: 0 35px 0 5px;
+    /* transition: 5s; */
 }
 
 .input-box .icon {
@@ -183,6 +214,55 @@ h1{
     font-size: 1.2em;
     color: #162938;
     line-height: 57px;
+}
+
+.remember-me {
+    font-size: .9em;
+    color: #162938;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.remember-me label input {
+    accent-color: #162938;
+    margin-right: 3px;
+}
+.remember-me a{
+    color: #162938;
+    text-decoration: none;
+}
+.remember-me a:hover{
+    text-decoration: underline;
+}
+.btn {
+    width: 100%;
+    height: 45px;
+    background: #162938;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
+    color: #fff;
+
+}
+.login-register {
+    font-size: .9em;
+    color-scheme: #162938;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+.login-register p a {
+    color: #162938;
+    text-decoration: none;
+    font-weight: 600;
+}
+.login-register p a:hover {
+    text-decoration: underline;
 }
 /* END styling homepage home.html */
 
